--- a/RSImacd.ipynb
+++ b/RSImacd.ipynb
@@ -53,7 +53,7 @@
     "    # 策略参数\n",
     "    amWindow = 20\n",
     "    macdfastPeriod = 12; macdslowPeriod = 26; macdsignalPeriod = 9\n",
-    "    rsishortPeriod = 6; rsilongPeriod = 12\n",
+    "    fastk_period = 6; fastd_period = 12\n",
     "    trailingPct = 0.04\n",
     "    lot = 1\n",
     "    \n",
@@ -66,13 +66,13 @@
     "    paramList = [\n",
     "                 'amWindow',\n",
     "                 \"macdfastPeriod\" , \"macdslowPeriod\", \"macdsignalPeriod\"\n",
-    "                 \"rsishortPeriod\" , \"rsilongPeriod\"\n",
+    "                 \"fastk_period\",\"fastd_period\"\n",
     "                ]  \n",
     "    \n",
     "    # 变量列表，保存了变量的名称\n",
     "    varList = ['transactionPrice',\n",
     "               'intraTradeHighDict', 'intraTradeLowDict',\n",
-    "               'macd'\n",
+    "               'macd','fastk','fastd '\n",
     "              ] \n",
     "    \n",
     "    # 同步列表，保存了需要保存到数据库的变量名称\n",
@@ -146,23 +146,39 @@
     "        elif (macd[-2]>0) and (macd[-1]<=0):\n",
     "            self.macd[symbol] = -1\n",
     "        self.putEvent()    \n",
-    "        Signal=self.WVAD[symbol]   \n",
-    "        if ma6wvad[-1]>ma24wvad[-1] and (self.posDict[symbol+'_LONG']==0):\n",
-    "            if self.posDict[symbol+'_SHORT']==0:\n",
-    "                self.buy(symbol,bar.close*1.02, self.lot)\n",
-    "            elif self.posDict[symbol+'_SHORT'] > 0:\n",
-    "                self.cancelAll()\n",
-    "                self.cover(symbol,bar.close*1.1, self.posDict[symbol+'_SHORT'])\n",
-    "                self.buy(symbol,bar.close*1.1, self.lot)\n",
-    "        elif ma6wvad[-1]<ma24wvad[-1] and (self.posDict[symbol+'_SHORT']==0):\n",
-    "            if (self.posDict[symbol+'_LONG']==0):\n",
-    "                self.short(symbol,bar.close*0.9, self.lot)\n",
-    "            elif self.posDict[symbol+'_LONG']>0:\n",
-    "                self.cancelAll()\n",
-    "                self.sell(symbol,bar.close*0.98, self.posDict[symbol+'_LONG'])\n",
-    "                self.short(symbol,bar.close*0.98, self.lot)\n",
-    "        self.putEvent()\n",
-    "   \n",
+    "       \n",
+    " #----------------------------------------------------------------------\n",
+    "    \n",
+    "    def on15MinBar(self, bar):\n",
+    "        \"\"\"收到15MinBar推送\"\"\"\n",
+    "        symbol = bar.vtSymbol\n",
+    "        \n",
+    "        am15 = self.getArrayManager(symbol, \"15m\")\n",
+    "        \n",
+    "        if not am15.inited:\n",
+    "            return\n",
+    "\n",
+    "#         lowRSI = ta.RSI(am15.close, self.rsiPeriod).rolling(window=14).min()\n",
+    "#         highRSI = ta.RSI(am15.close, self.rsiPeriod).rolling(14).max() \n",
+    "#         StochRSI_K = 100 * (RSI - lowRSI).rolling(3).mean()/(highRSI - lowRSI).rolling(3).mean()\n",
+    "        fastk, fastd = ta.STOCHRSI(close, timeperiod=14, fastk_period=5, fastd_period=3, fastd_matype=0)\n",
+    "        \n",
+    "        if (fastk<60) and (fastk>40) and (fastk>fastd) and (self.macd[symbol]==1):  #如果满足信号 \n",
+    "            if  (self.posDict[symbol+'_SHORT']==0) and (self.posDict[symbol+'_LONG']==0):  #没有持仓\n",
+    "                self.buy(symbol, bar.close*1.01, self.lot)  # 成交价*1.01发送高价位的限价单，以最优市价买入进场\n",
+    "            elif (self.posDict[symbol+'_SHORT'] > 0):\n",
+    "                self.cancelAll() # 撤销挂单\n",
+    "                self.cover(symbol, bar.close*1.01, self.posDict[symbol+'_SHORT']) \n",
+    "                self.buy(symbol, bar.close*1.01, self.lot)\n",
+    "        # 趋势为空头\n",
+    "        if (fastk<fastd) and (self.macd[symbol]==-1):\n",
+    "            if (self.posDict[symbol+'_LONG']==0) and (self.posDict[symbol+'_SHORT']==0):\n",
+    "                self.short(symbol, bar.close*0.99, self.lot) # 成交价*0.99发送低价位的限价单，以最优市价卖出进场\n",
+    "            elif (self.posDict[symbol+'_LONG'] > 0):\n",
+    "                self.cancelAll() # 撤销挂单\n",
+    "                self.sell(symbol, bar.close*0.99, self.posDict[symbol+'_LONG'])\n",
+    "                self.short(symbol, bar.close*0.99, self.lot)and (rsifast[-1]<=50)\n",
+    "       \n",
     "    #----------------------------------------------------------------------\n",
     "    def onOrder(self, order):\n",
     "        \"\"\"收到委托变化推送（必须由用户继承实现）\"\"\"\n",
